completed feature : profile setting

--- a/src/index.less
+++ b/src/index.less
@@ -27,4 +27,9 @@ body {
   .ant-spin-container {
     overflow: visible !important;
   }
+  .description {
+    color: rgba(0,0,0,.45);
+    font-size: 14px;
+    line-height: 22px;
+  }
 }
