--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -6,6 +6,7 @@
   background: #fff;
   box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
   position: relative;
+  width:100%;
 }
 
 :global {
@@ -14,7 +15,10 @@
     overflow-x: hidden;
   }
 }
-
+.compname{
+  font-size:22px;
+  font-weight:bold;
+}
 .logo {
   height: 64px;
   line-height: 58px;
