--- a/src/index.less
+++ b/src/index.less
@@ -28,7 +28,7 @@ body {
     overflow: visible !important;
   }
   .description {
-    color: rgba(0,0,0,.45);
+    color: rgba(0, 0, 0, 0.45);
     font-size: 14px;
     line-height: 22px;
   }
