--- a/src/index.ejs
+++ b/src/index.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>韩诚售电云平台</title>
+  <title>ADP-AdminSF</title>
   <link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
   <link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
 </head>
